# openclaw-oneman-company

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  GITHUB_SETUP.md  IDENTITY.md  INTEGRATION_REPORT.md  LICENSE  MEMORY.md  README.md  README_AGENT_BROWSER.md  SOUL.md  agent-browser.js  clawhub-monitor-state.json  package.json
.clawhub/: lock.json
.github/workflows/: security-scan.yml
.openclaw/: workspace-state.json
ai-development/coze-feature-engineering/: README.md  pyproject.toml  requirements.txt  开发报告.md
ai-development/coze-feature-engineering/docs/: api.md  user_guide.md
ai-development/coze-feature-engineering/examples/: basic_usage.py
ai-development/coze-feature-engineering/src/: main.py
ai-development/coze-feature-engineering/src/api/: __init__.py  feature_api.py
ai-development/coze-feature-engineering/src/feature_engineering/: __init__.py  feature_evaluator.py  feature_extractor.py  feature_selector.py  feature_transformer.py  utils.py
ai-development/coze-feature-engineering/src/schemas/: __init__.py  feature_schemas.py
ai-development/coze-feature-engineering/tests/: test_evaluator.py  test_extractor.py  test_selector.py  test_transformer.py
ai-mindmap/: DEV_PLAN.md  README.md  start.sh  优化报告.md
examples/: search-workflow.js
imagemagick/: README.md
memory/: README.md
reports/: clawhub-2026-03-15.md  clawhub-business-skills-2026-03-15.md
rules/: README.md
skills/: update-report-2026-03-14.md
test-skill/: SKILL.md
参考资料/: zh-CN-localization.md  工具安装部署方案.md
安全中心/: SECURITY.md
项目库/: OpenClaw能力升级报告_v1.0.md
(+354 files in other folders)
